Fixed some changes Massive speed boost VM arguments Added suppresswarnings static method Added supresswarnings hiding Fixed unused Fixed qualification Fixed qualification and removed blank constructor Fixed qualified access and modifier Fixed qualification and modifier Fixed unused import Fixed unused else and param assignment Removed unused import Fixed qualifcation and redundent specs Fixed qualifcation Fixed qualified access and hiding Fixed qualified access and supresswarnings unused Fixed qualified access Fixed qualified access and redundent specs Fixed qualified access, supresswarnings resources, and removed unused import Fixed qualified access and modifiers Fixed qualified access and added hiding supresswarnings Fixed qualified access and redundent null checks Added supresswarnings unused and qualified access Added @supresswarnings unused Added @SupressWarnings unused Fixed qualifcation, redundent specs Fixed qualifaction, fixed redundant specs, removed unused imports Removed unused imports and added supresswarnings unused Removed unused imports Removed unused imports and fixed (I forgot) Added & removed unneeded supresswarnings Fixed qualification and redundent specs Fixed redundant specs and qualification Fixed qualification, unused imports and elses, redundant specs, and unused vars Removed uneeded else, and added modifier Added TWR suppress Fixed qualified access and redundant specs Fixed stream closing Added resource supresses and uneeded elses removed Fixed qualifcation and unneeded elses Fixed qualification Fixed redundant specs, qualifcation, and unused warnings Fixed redundent specs, unneeded elses, and supresswarnings Added try with resource supresswarnings (it's only 1.7+, but 1.7 begs you to use it) Supresswarnings, fixed java compiler stupidity, qualified access Added some supresswarnings Qualified access, supresswarnings Added supresswarnings, added missing @override, removed unused imports More missing serial IDs Added missing serial ID Added m